Bug 513299, add a flag to focus events to indicate that a window was raised, fixes issue where text in a field is selected when a window is raised, r=smaug.sr=neil